Autocrack - automatically crack everything throught CPU and GPU
Copyright (C) 2012  Massimo Dragano <massimo.dragano@gmail.com>

2012-10-08 Massimo Dragano <massiom.dragano@gmail.com>
	* autocrack.c: 	moved verbosity control on first option check.
										optimized network check killer.
	* INSTALL: add instructions on install-sh
2012-09-22	Massimo Dragano <massimo.dragano@gmail.com>
	* autocrack.c:	use optind for restart getopt counter.
2012-09-09	Massimo Dragano <massimo.dragano@gmail.com>
	* autocrack.c:	fix option parsing bug that keep run even if no data has been provided
2012-08-28	Massimo Dragano <massimo.dragano@gmail.com>
	*	configure.ac:	hide rcracki_mt checking.
2012-08-27	Massimo Dragano <massimo.dragano@gmail.com>
	*	common.c:			auto-kill if cannot terminate some childs.
	* autocrack.c:	double parse options for exit immediatly if user ask for help or infos.
	* All:					minor bug-fixes
2012-06-04	Massimo Dragano	<massimo.dragano@gmail.com>
	* : First release.